# serializer version: 1
# name: TestParsing.test_extract_document_version[IFTSTA]
  ''
# ---
# name: TestParsing.test_extract_document_version[REMADV]
  '2.9b'
# ---
# name: TestParsing.test_extract_document_version[REQOTE]
  '1.3'
# ---
# name: TestParsing.test_extract_document_version[UTILMDG]
  'G1.0a'
# ---
# name: TestParsing.test_extract_document_version[UTILMDS]
  'S1.1'
# ---
